[package]
name = "post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-driven-library = {version="0.1.11"}
chrono = {version="*",features=["serde"]}
macro_rules_attribute="*"
async-trait = {version="*"}
paste="*"
serde = {version="*",features=["derive"]}
serde_json = "*"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace","cors"] }
axum = {version="*",features=["headers"]}
axum-macros = {version="*"}
tokio = { version = "*", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
dotenv={version="*"}
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "migrate", "postgres","uuid","chrono","offline","decimal","json"] }

env_logger = "*"
pulsar = "*"
log = "*"
futures = "*"
